syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.edu.ufabc.mfmachado.chordzilla.proto";

service RetrieveDataNotFound {
  rpc NotFound (RetrieveDataNotFoundRequest) returns (RetrieveDataNotFoundResponse) {}
}

message RetrieveDataNotFoundRequest {
  string key = 1;
}

message RetrieveDataNotFoundResponse {}